Changes to body, and color
Problems:
+ Header tag for the about section causes it to bloat
+ I still don't like how the text shows up, it looks unclear
+ header/footer not centered
+ spacing is awkward

What I've done:
~ removed header tag from the about h2
~ added a bg color to the h1 tags (only one element is using it so it
should be fine) in an attempt to see if i can later add an alpha value
and make it look better
~ re-added auto margin to the body

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <style>
 /* ------------ General Tags ------------------*/
     body {
-      /*margin: 0 auto; */
+      margin: 0 auto;
        background-color: #D3D3D3;
       font-size: 16px; 
       font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
@@ -24,6 +24,7 @@
       /*background: #F8F8FF;  Change to modify background color */ 
     }
     header{
+
       height: 150px;
       width: 90%;
       border-radius: 12px;
@@ -36,6 +37,7 @@
     }
     p{} 
     h1 { 
+      background-color: rgba(255,255,255,0.5);
       color: rgb(143,250,255); /* Change to modify header 1 colors */
       font-family: 'Lato', sans-serif; /* set fonts for header 1 */ 
       text-align: center; /* centers header 1 */
@@ -146,9 +148,7 @@
     </ul>
     <div id="tabs-1">
       <div class="about">
-        <header>
-          <h2 id="s1">About Jason</h2>
-        </header>
+        <h2 id="s1">About Jason</h2>
         <div id="wrapper">
           <div id="aboutdiv1">
             <div id="webmaster">
