Center foot and head. Removed h1color
Problems:
+Header and footer need to be individually centered
+ H1 color overlaps onto space

Solutions:
- Removed the h1 color
- added margin auto to head and foot
- set width to 95%

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       /*background: #F8F8FF;  Change to modify background color */ 
     }
     header{
-
+      margin: 0 auto;
       height: 150px;
-      width: 90%;
+      width: 95%;
       border-radius: 12px;
       background: -moz-linear-gradient(top, #373737, #212121);
       background: -webkit-linear-gradient(top, #373737, #212121);
@@ -37,7 +37,6 @@
     }
     p{} 
     h1 { 
-      background-color: rgba(255,255,255,0.5);
       color: rgb(143,250,255); /* Change to modify header 1 colors */
       font-family: 'Lato', sans-serif; /* set fonts for header 1 */ 
       text-align: center; /* centers header 1 */
@@ -62,8 +61,9 @@
       text-decoration: none; /* Remove the underline of the hyperlinks */
     }
     footer{
+      margin: 0 auto;
       height: 100px;
-      width: 90%;
+      width: 95%;
       border-radius: 12px;
       color: rgb(143,250,255); /* Change to modify header 1 colors */
       text-align: center; /* centers header 2 */
