New focus of changes.
Problems:
+ spacing for footer text could use a br.
+ about tab divs are messed up, I need to center the divs and solve the
issue I have there or else @ media will mess me over
+ I want the tabs div to still allow me to see the border.

Solutions:
~ Made a new id for tabs (so the css will also read mine) that defines
the with as 98% so we can see background past it
~ Tried using percentages in the wrapper, about divs, and removed
padding to test.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       border-radius: 12px;
       color: rgb(143,250,255); /* Change to modify header 1 colors */
       text-align: center; /* centers header 2 */
-      font-family: 'Exo', sans-serif; /* set fonts for header 1 */
-      font-size: 20px; /* Change to modify header1 font size */
+      font-family: 'Lato', sans-serif; /* set fonts for header 1 */
+      font-size: 10px; /* Change to modify header1 font size */
       background: -moz-linear-gradient(top, #373737, #212121);
       background: -webkit-linear-gradient(top, #373737, #212121);
       background: -ms-linear-gradient(top, #373737, #212121);
@@ -103,23 +103,27 @@
       background-image: url("http://taouci.com/2014SummerWebsite/BoardImages20142015/webmaster.png"); 
       box-shadow: 10px 10px 5px #888888;
     }
-    #wrapper { /*ID used for wrapping divs that I want to overlap, currently empty. */
+    #wrapper { 
+      width: 70%;
+      height: 500px;
+      margin: 0 auto;
+      /*ID used for wrapping divs that I want to overlap, currently empty. */
     }
     /* This section is for the about me portion of this page */
     #aboutdiv1 {  
-      padding: 20px 20px 20px 20px;
       display: inline-block;
-      width:250px;
-      height:250px;
+      width:50%;
+      height:50%;
     }
     #aboutdiv2 {
-      padding: 10px;
-      max-width: 600px;
+      width:50%;
+      height:50%;
       word-wrap: break-word; /* should stop words from overflowing? */ 
       vertical-align:top;
       display: inline-block;
-      width: auto;
-      height:300px;
+    }
+    #tabs {
+      width:98%;
     }
   </style>
 </head>
@@ -190,8 +194,10 @@
 <!-- FOOTER  -->
  
   <footer>
-    <p class="copyright">This website is maintained by Jason, aka <a href="https://github.com/foreza">foreza</a></p>
-    <p>Published with love from <a href="http://pages.github.com">GitHub Pages</a></p>
+    <br>
+    <p class="copyright">This website is maintained by Jason Chiu, @github: <a href="https://github.com/foreza">foreza</a></p>
+    <p>Published with love with <a href="http://pages.github.com">GitHub Pages</a></p>
+    <br>
   </footer>
  
 
