Changed % back to numbers for the about divs.

--- a/index.html
+++ b/index.html
@@ -104,20 +104,20 @@
       box-shadow: 10px 10px 5px #888888;
     }
     #wrapper { 
-      width: 70%;
-      height: 500px;
+      width: 85%;
+      height: 400px;
       margin: 0 auto;
       /*ID used for wrapping divs that I want to overlap, currently empty. */
     }
     /* This section is for the about me portion of this page */
     #aboutdiv1 {  
       display: inline-block;
-      width:40%;
-      height:30%;
+      width:300px;
+      height:300px;
     }
     #aboutdiv2 {
-      width:40%;
-      height:30%;
+      width:500px;
+      height:400px;
       word-wrap: break-word; /* should stop words from overflowing? */ 
       vertical-align:top;
       display: inline-block;
