--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     /* This section is for the about me portion of this page */
     #aboutdiv1 {  
       display: inline-block;
-      width:300px;
+      width:50%;
+      min-width: 300px;
       height:300px;
     }
     #aboutdiv2 {
