Added auto to my width for webmaster

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     #webmaster{ /* Profile Picture, pic, Jason */
       margin: -40px 0px 0px 0px; 
       height: 200px;
-      width: 200px;
+      width: auto;
       background-size: cover;
       background-image: url("http://taouci.com/2014SummerWebsite/BoardImages20142015/webmaster.png"); 
       box-shadow: 10px 10px 5px #888888;
