Chnaged margin of webmaster to auto 0

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     }
     /* ------------ ID (#id) ------------------*/ 
     #webmaster{ /* Profile Picture, pic, Jason */
-      margin: -40px 0px 0px 0px; 
+      margin: 0 auto;
       height: 200px;
-      width: auto;
+      width: 200px;
       background-size: cover;
       background-image: url("http://taouci.com/2014SummerWebsite/BoardImages20142015/webmaster.png"); 
       box-shadow: 10px 10px 5px #888888;
