Playing around to get what I want with divs

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
     #wrapper { 
       width: 85%;
-      height: 400px;
+      min-height: 300px;
       margin: 0 auto;
       /*ID used for wrapping divs that I want to overlap, currently empty. */
     }
@@ -117,8 +117,9 @@
       height:300px;
     }
     #aboutdiv2 {
-      width:500px;
-      height:400px;
+      padding-top: 20px;
+      width:400px;
+      height:300px;
       word-wrap: break-word; /* should stop words from overflowing? */ 
       vertical-align:top;
       display: inline-block;
