Vainly attempting to constrain slider

--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
     .mySlider{ /* Slider, slick */
       border: 1px solid green; /* For debug */
       padding: 2px;
-      height: 500px;
+      height: 200px;
       width: 500px;
       margin: 0 auto;
     }
     .sliderItem{
+      max-height: 200px;
     }
     /* ------------ ID (#id) ------------------*/ 
     #webmaster{ /* Profile Picture, pic, Jason */
