THIS WILL BREAK THE SLIDER
ARE YOU READY

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
       margin: 0 auto;
     }
     .sliderItem{
-      max-height: 200px;
+      width:540px; /* you can use % */
+      height: auto;
     }
     /* ------------ ID (#id) ------------------*/ 
     #webmaster{ /* Profile Picture, pic, Jason */
@@ -198,7 +199,8 @@
   </div>
 <!-- Sample button usage -->
 <!-- FOOTER  -->
- 
+    <br>
+    <br>
   <footer>
     <br>
     <p class="copyright">This website is maintained by Jason Chiu, @github: <a href="https://github.com/foreza">foreza</a></p>
