THIS WILL FIX THE SLIDER
HAHA

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       margin: 0 auto;
     }
     .sliderItem{
-      width:540px; /* you can use % */
-      height: auto;
+      height: 200px;
+      width: auto; /* you can use % */
     }
     /* ------------ ID (#id) ------------------*/ 
     #webmaster{ /* Profile Picture, pic, Jason */
