Playing around with slider

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       margin: 0 auto;
     }
     .sliderItem{
-      height: 200px;
+      max-height: 200px;
       width: auto; /* you can use % */
     }
     /* ------------ ID (#id) ------------------*/ 
