Removing slider element

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       width: 500px;
       margin: 0 auto;
     }
-    .sliderItem{
+    .slieeederItem{
       max-height: 200px;
       width: auto; /* you can use % */
     }
