--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       height: 200px;
       width: 500px;
       margin: 0 auto;
+      overflow: visible;
     }
     .slieeederItem{
       max-height: 200px;
