--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <br>
   
   <div class="mySlider">
-    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
+    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" width="200" height="85"  alt =""></a></div>
     <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
     <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
     <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
