Moving header 2 in the tabs to the side.
applying it just to the "about jason"

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
       max-height: 200px;
       width: auto; /* you can use % */
     }
+    .insideTab{
+      text-align: left;
+    }
     /* ------------ ID (#id) ------------------*/ 
     #webmaster{ /* Profile Picture, pic, Jason */
       margin: 0 auto;
@@ -161,7 +164,7 @@
     </ul>
     <div id="tabs-1">
       <div class="about">
-        <h2 id="s1">About Jason</h2>
+        <div class="insideTab"><h2 id="s1">About Jason</h2></div>
         <div id="wrapper">
           <div id="aboutdiv1">
             <div id="webmaster">
