Mistake: incorrectly wrapped.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </ul>
     <div id="tabs-1">
       <div class="about">
-        <div class="insideTab"><h2 id="s1">About Jason</h2></div>
+   <h2 id="s1" class="insideTab">About Jason</h2>
         <div id="wrapper">
           <div id="aboutdiv1">
             <div id="webmaster">
