--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
     /* This section is for the about me portion of this page */
     #aboutdiv1 {  
       display: inline-block;
-      width:50%;
+      width:30%;
       min-width: 300px;
       height:300px;
     }
     #aboutdiv2 {
       padding-top: 20px;
-      width:400px;
+      width:auto;
       height:300px;
       word-wrap: break-word; /* should stop words from overflowing? */ 
       vertical-align:top;
