Changed wrapper width to 90%
Also:
Decreased height of aboutdiv to 200 and added a bit of padding to it.
Added the @media seection for the insidetab, so it will switch back to
center.

--- a/index.html
+++ b/index.html
@@ -110,17 +110,18 @@
       box-shadow: 10px 10px 5px #888888;
     }
     #wrapper { 
-      width: 85%;
+      width: 90%;
       min-height: 300px;
       margin: 0 auto;
       /*ID used for wrapping divs that I want to overlap, currently empty. */
     }
     /* This section is for the about me portion of this page */
     #aboutdiv1 {  
+      padding: 20px 20px 20px 20px;
       display: inline-block;
       width:30%;
       min-width: 300px;
-      height:300px;
+      height:200px;
     }
     #aboutdiv2 {
       padding-top: 20px;
