Body change for @ media
Anything in the body tag will be set to 12 px firstly.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,37 @@
       margin: 0 auto;
       width:98%;
     }
+
+
+
+    @media (max-width: 500px)  {
+
+    body {
+      margin: 0 auto;
+      background-color: #D3D3D3;
+      font-size: 12px; 
+      font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+      /* line-height: 1.5;  Change this to modify line height in the body */ 
+      /*background: #F8F8FF;  Change to modify background color */ 
+    }
+
+    .insideTab{
+      text-align: center;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+    }
   </style>
 </head>
 
