Added h1 and h2 to @ media 500
Decreases font size
(i should consider looking to see what bootstrap is..)

--- a/index.html
+++ b/index.html
@@ -147,6 +147,20 @@
       /* line-height: 1.5;  Change this to modify line height in the body */ 
       /*background: #F8F8FF;  Change to modify background color */ 
     }
+    h1 { 
+      color: rgb(143,250,255); /* Change to modify header 1 colors */
+      font-family: 'Lato', sans-serif; /* set fonts for header 1 */ 
+      text-align: center; /* centers header 1 */
+      font-size: 35px; /* Change to modify header1 font size */
+      margin: 20px 0px 0px 0px; /* margin sets header1 20 pixels from top */
+    }
+    h2 { 
+      color: #696969;
+      font-family: 'Economica', sans-serif; /* set fonts for header 2 */ 
+      text-align: center; /* centers header 2 */
+      font-size: 15px; /* Change to modify header1 font size */
+      margin: 0px 0px 0px 0px; /* margin none */
+    }
     .insideTab{
       text-align: center;
     }
