Debug options for about div
Also added some changes in media and changed slider size

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     }
     /* This section is for the about me portion of this page */
     #aboutdiv1 {  
+      border: 1px solid green; /* For debug */
       padding: 20px 20px 20px 20px;
       display: inline-block;
       min-width: 250px;
@@ -158,7 +159,7 @@
       color: #696969;
       font-family: 'Economica', sans-serif; /* set fonts for header 2 */ 
       text-align: center; /* centers header 2 */
-      font-size: 15px; /* Change to modify header1 font size */
+      font-size: 20px; /* Change to modify header1 font size */
       margin: 0px 0px 0px 0px; /* margin none */
     }
     .insideTab{
@@ -189,12 +190,12 @@
   <br>
   
   <div class="mySlider">
-    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" width="500" height="200"  alt =""></a></div>
-    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" width="500" height="200"  alt =""></a></div>
-    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" width="500" height="200"  alt =""></a></div>
-    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" width="500" height="200"  alt =""></a></div>
-    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" width="500" height="200"  alt =""></a></div>
-    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" width="500" height="200"  alt =""></a></div>
+    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" width="400" height="200"  alt =""></a></div>
+    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" width="400" height="200"  alt =""></a></div>
+    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" width="400" height="200"  alt =""></a></div>
+    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" width="400" height="200"  alt =""></a></div>
+    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" width="400" height="200"  alt =""></a></div>
+    <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" width="400" height="200"  alt =""></a></div>
   </div>
   <br>
   <br>
