--- a/index.html
+++ b/index.html
@@ -68,13 +68,12 @@
       color: rgb(143,250,255); /* Change to modify header 1 colors */
       text-align: center; /* centers header 2 */
       font-family: 'Lato', sans-serif; /* set fonts for header 1 */
-      font-size: 10px; /* Change to modify header1 font size */
+      font-size: 15px; /* Change to modify header1 font size */
       background: -moz-linear-gradient(top, #373737, #212121);
       background: -webkit-linear-gradient(top, #373737, #212121);
       background: -ms-linear-gradient(top, #373737, #212121);
       background: -o-linear-gradient(top, #373737, #212121);
       background: linear-gradient(top, #373737, #212121);
-
     }
 /* ------------ Classes (.class) ------------------*/ 
     .myframe{
@@ -88,7 +87,7 @@
     .mySlider{ /* Slider, slick */
       border: 1px solid green; /* For debug */
       padding: 2px;
-      width: 500px;
+      width: 400px;
       height: 200px;
       margin: 0 auto;
       overflow: visible;
@@ -109,10 +108,12 @@
       background-image: url("http://taouci.com/2014SummerWebsite/BoardImages20142015/webmaster.png"); 
       box-shadow: 10px 10px 5px #888888;
     }
-    #wrapper { 
-      width: 90%;
+    #wrapper {
+      padding: 20px 0px 0px 20px; 
+      border: 1px solid red; /* For debug */
       min-height: 300px;
       margin: 0 auto;
+
       /*ID used for wrapping divs that I want to overlap, currently empty. */
     }
     /* This section is for the about me portion of this page */
@@ -161,6 +162,31 @@
       text-align: center; /* centers header 2 */
       font-size: 20px; /* Change to modify header1 font size */
       margin: 0px 0px 0px 0px; /* margin none */
+    }
+    header{
+      margin: 0 auto;
+      height: 70px;
+      width: 100%;
+      border-radius: 5px;
+      background: -moz-linear-gradient(top, #373737, #212121);
+      background: -webkit-linear-gradient(top, #373737, #212121);
+      background: -ms-linear-gradient(top, #373737, #212121);
+      background: -o-linear-gradient(top, #373737, #212121);
+      background: linear-gradient(top, #373737, #212121);
+    }
+    footer{
+      margin: 0 auto;
+      height: 100px;
+      width: 100%;
+      border-radius: 5px;z
+      text-align: center; /* centers header 2 */
+      font-family: 'Lato', sans-serif; /* set fonts for header 1 */
+      font-size: 12px; /* Change to modify header1 font size */
+      background: -moz-linear-gradient(top, #373737, #212121);
+      background: -webkit-linear-gradient(top, #373737, #212121);
+      background: -ms-linear-gradient(top, #373737, #212121);
+      background: -o-linear-gradient(top, #373737, #212121);
+      background: linear-gradient(top, #373737, #212121);
     }
     .insideTab{
       text-align: center;
