Edited the divs padding and added auto to div2

--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
     }
     /* ------------ ID (#id) ------------------*/ 
     #webmaster{ /* Profile Picture, pic, Jason */
-      margin: 0 auto;
       height: 200px;
       width: 200px;
       background-size: cover;
@@ -109,7 +108,6 @@
       box-shadow: 10px 10px 5px #888888;
     }
     #wrapper {
-      padding: 20px 0px 0px 20px; 
       border: 1px solid red; /* For debug */
       min-height: 300px;
       margin: 0 auto;
@@ -119,7 +117,7 @@
     /* This section is for the about me portion of this page */
     #aboutdiv1 {  
       border: 1px solid green; /* For debug */
-      padding: 20px 20px 20px 20px;
+      padding-top: 10px;
       display: inline-block;
       min-width: 250px;
       height:200px;
@@ -127,7 +125,9 @@
     #aboutdiv2 {
       padding-top: 20px;
       width:auto;
-      height:300px;
+      max-width: 600px;
+      height:auto;
+      min-height:200px;
       word-wrap: break-word; /* should stop words from overflowing? */ 
       vertical-align:top;
       display: inline-block;
