--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@
     .insideTab{
       text-align: center;
     }
+    #aboutdiv1 {  
+      border: 1px solid green; /* For debug */
+      padding-top: 10px;
+      display: inline-block;
+      min-width: 400px;
+      height:200px;
+    }
+    #aboutdiv2 {
+      padding-top: 20px;
+      width:auto;
+      max-width: 600px;
+      height:auto;
+      min-height:200px;
+      word-wrap: break-word; /* should stop words from overflowing? */ 
+      vertical-align:top;
+      display: inline-block;
+    }
 
 
 
