Last update before airport.

--- a/index.html
+++ b/index.html
@@ -30,37 +30,57 @@
 <body>
  
 
-<div id="home">
+<div id="about">
 
 <div class="fixedheader">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 <div class="m1 menu">
 <div class="navbar-inner">
 <div class="container">
-                      <h1>Jason Chiu</h1>
-                      <h2>Programmer. Developer.</h2>
-                      <h3>Summoner and Questing Adventurer</h3>
+                    
             <ul class="nav nav-pills navbar-right">
-                <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Experience</a></li>
+                <li><a class="active" href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
+            <h1>Jason Chiu</h1>
+                      <h2>Programmer. Developer.</h2>
+                      <h3>Summoner and Questing Adventurer</h3>
 </div>
 </div>
 </div>
 </nav>
 </div>
+</div>
 
-<div class="col-lg-3">
-  <h4>Avout </h4>
+<div id="aboutMe_Section">
+      <h2>About</h2>
+
+<div class="col-lg-4">
+  <p> Like this test? </p>
+
   </div>
 
+<div class="col-lg-8">
+  <p> Cuz I sorta do.</p>
+
+  </div>
+
+</div>
+
+
+<div id="experience">
 
 
 
+
+
+
+
+
+</div>
 
 
 
