Began adding content.
Added about, experience, and resume.
Blog and Projects will have their own respective pages.
Blog will be worked on later.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <ul class="nav nav-pills navbar-right">
                 <li><a class="active" href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
+                <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
             <h1>Jason Chiu</h1>
@@ -55,7 +55,7 @@
 </div>
 </div>
 
-<div id="aboutMe_Section">
+<div id="about">
       <h2>About</h2>
 
 <div class="col-lg-4">
@@ -73,9 +73,20 @@
 
 <div id="experience">
 
+<h2>Experience</h2>
 
 
 
+
+
+</div>
+
+
+
+<div id="resume">
+<h2>Resume</h2>
+
+<p> Here is my resume: <a href="#">PDF</a></p>
 
 
 
