--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 <div class="m1 menu">
 <div class="navbar-inner">
-<div class="container">
                     
             <ul class="nav nav-pills navbar-right">
                 <li><a class="active" href="#about">About</a></li>
@@ -50,12 +49,12 @@
                       <h3>Summoner and Questing Adventurer</h3>
 </div>
 </div>
-</div>
 </nav>
 </div>
 </div>
 
 <div id="about">
+<div class="bogus"></div>
       <h2>About</h2>
 
 <div class="col-lg-4">
@@ -72,7 +71,7 @@
 
 
 <div id="experience">
-
+<div class="bogus"></div>
 <h2>Experience</h2>
 
 
@@ -84,6 +83,7 @@
 
 
 <div id="resume">
+<div class="bogus"></div>
 <h2>Resume</h2>
 
 <p> Here is my resume: <a href="#">PDF</a></p>
