Began some theme stuff.
Removed additional about

--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 
 <body>
  
-
-<div id="about">
-
 <div class="fixedheader">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 <div class="m1 menu">
@@ -45,15 +42,15 @@
                 <li><a href="#">Blog</a></li>
             </ul>
             <h1>Jason Chiu</h1>
-                      <h2>Programmer. Developer.</h2>
-                      <h3>Summoner and Questing Adventurer</h3>
+                      <h2>Producer. Developer.</h2>
+                      <h3>Summoner. Questing Adventurer.</h3>
 </div>
 </div>
 </nav>
 </div>
-</div>
 
 <div id="about">
+
 <div class="bogus"></div>
       <h2>About</h2>
 
