Added constrain80, and made bogus class

--- a/index.html
+++ b/index.html
@@ -54,16 +54,23 @@
 <div class="bogus"></div>
       <h2>About</h2>
 
+<div class="row constrain80">
 <div class="col-lg-4">
   <p> Like this test? </p>
 
   </div>
 
-<div class="col-lg-8">
+<div class="col-lg-4">
   <p> Cuz I sorta do.</p>
 
   </div>
 
+<div class="col-lg-4">
+  <p> Cuz I do.</p>
+
+  </div>
+
+</div>
 </div>
 
 
