Added more themes.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
 <h2>Experience</h2>
 
 
+<div class="row constrain80">
+<div class="col-lg-6">
+  <p>Organizing UCI's first hackathon, </p>
+
+  </div>
+
+<div class="col-lg-6">
+  <p></p>
+
+  </div>
+</div>
+
+
 
 
 
@@ -105,8 +118,8 @@
 
   <footer>
     <br>
-    <p class="copyright">This website is maintained by Jason Chiu, @github: <a href="https://github.com/foreza">foreza</a></p>
-    <p>Published with love with <a href="http://pages.github.com">GitHub Pages</a></p>
+This website is maintained by Jason Chiu, @github: <a href="https://github.com/foreza">foreza</a>
+    Published with love with <a href="http://pages.github.com">GitHub Pages</a>
     <br>
   </footer>
  
