Finalized theme for website.
Next step should be to throw stuff.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
 <div class="col-lg-4">
   <p> Cuz I do.</p>
 
+
+  Readyforce:
+  Linkedin:
+  Github:
+  
+
   </div>
 
 </div>
@@ -81,12 +87,29 @@
 
 <div class="row constrain80">
 <div class="col-lg-6">
-  <p>Organizing UCI's first hackathon, </p>
+  <p>
+  <ul>
+    <li> Test
+    <li> Test
+    <li> Test
+    <li> Test
+    <li> Test
+  </ul>
+   </p>
 
   </div>
 
 <div class="col-lg-6">
-  <p></p>
+  <p>
+    <ul>
+
+    <li> I've done this and that.. [WIP] 
+    <li> I've done this and that.. [WIP] 
+    
+  </ul>
+
+
+  </p>
 
   </div>
 </div>
