Pushed lots of content into about section.
Will probably drizzle some down into the "experience" section.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <link rel="shortcut icon" href="images/tao_logo-favicon.ico"> <!-- used http://www.favicongenerator.com/ --> 
       <!-- Stylesheet for website -->
   <link rel="stylesheet" type="text/css" media="screen" href="jay.css"/>
-
       <!-- Website title -->
 <!-- -->
   <title>Jason Chiu</title>
@@ -28,12 +27,12 @@
 </head>
 
 <body>
- 
+
 <div class="fixedheader">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 <div class="m1 menu">
 <div class="navbar-inner">
-                    
+                  
             <ul class="nav nav-pills navbar-right">
                 <li><a class="active" href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -52,27 +51,46 @@
 <div id="about">
 
 <div class="bogus"></div>
-      <h2>About</h2>
+      <h2>About Me</h2>
 
 <div class="row constrain80">
 <div class="col-lg-4">
-  <p> Like this test? </p>
+  <p> <h1>Hi there! I'm Jason Chiu, and I'm a student at the <i>University of California, Irvine.</i></h1>
+
+  I major in <b> Computer Game Science </b> and am looking to minor in Business Management. <br>
+
+  I develop simple but challenging games, manage and mentor individuals who wish to enter the world of game development, and learn everything I can lay my hands on, whether it be 3D animation with Iclone/3DxChange, front-end web development with HTML/CSS, or marketing and project management - and I look to perfect and master everything I do. <br>
+
+ I was one of the organizers the first HackUCI; which drew over 300+ attendees. HackUCI was the first student-organized hackathon in Orange County, and lasted for 36 hours. Attendees worked on a variety of projects ranging from web applications to puzzle games. 
+
+  </p>
 
   </div>
 
 <div class="col-lg-4">
-  <p> Cuz I sorta do.</p>
+  <p> 
+  I'm currently employed as a Campus Ambassador for Readyforce for my school, and I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service! <br>
+
+  I'm also a research assistant at the California Plug Load Research center, where I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. 
+  </p>
 
   </div>
 
 <div class="col-lg-4">
-  <p> Cuz I do.</p>
+  <p> 
+  I've also quite involved in campus activites; I'm the Vice President of the Video Game Design Club @ UCI, which is an organization that helps aspiring game developers network with potential employers and opportunities, and make games.  <br>
 
+  I'm also the Webmaster of the Taiwanese American Organization @ UCI, which is a club that promotes Taiwanese Culture and helps connect fellow Taiwanese Americans with each other. <br>
 
-  Readyforce:
-  Linkedin:
-  Github:
+  In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br>
+
+  Find me on... <br>
+
+  <href ="www.readyforce.com/Jchiu5">Readyforce</href>
+  <href ="www.linkedin.com/in/foreza/">Linkedin</href>
+  <href ="www.github.com/foreza">Github</href>
   
+  </p>
 
   </div>
 
