Removed Cname since that was messing w/ domain.
Added pages for projects and blog.
Added sample content.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
-
-  <link rel="stylesheet" type="text/css" href="/slick-master/slick/slick.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="shortcut icon" href="images/tao_logo-favicon.ico"> <!-- used http://www.favicongenerator.com/ --> 
       <!-- Stylesheet for website -->
@@ -37,8 +35,8 @@
                 <li><a class="active" href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
             <h1>Jason Chiu</h1>
                       <h2>Producer. Developer.</h2>
