--- a/blog.html
+++ b/blog.html
@@ -50,8 +50,9 @@
 
 
 <div class="row constrain80">
+<div class="bogus"></div>
 
-<p> <h1> This is a sample blog post. </h1>
+<p> <h1> This is a sample blog post.</h1>
 
 This is some sample content. 
 
