--- a/index.html
+++ b/index.html
@@ -53,13 +53,22 @@
 
 <div class="row constrain80">
 <div class="col-lg-4">
-  <p> <h1>Hi there! I'm Jason Chiu, and I'm a student at the <i>University of California, Irvine.</i></h1>
+  <p> Hi there! I'm Jason Chiu, and I'm a student at the <i>University of California, Irvine.</i></h2>
 
-  I major in <b> Computer Game Science </b> and am looking to minor in Business Management. <br>
+  I major in <b> Computer Game Science </b> and am looking to minor in Business Management.<br>
 
-  I develop simple but challenging games, manage and mentor individuals who wish to enter the world of game development, and learn everything I can lay my hands on, whether it be 3D animation with Iclone/3DxChange, front-end web development with HTML/CSS, or marketing and project management - and I look to perfect and master everything I do. <br>
+  I manage and mentor individuals who wish to enter the world of game development, and learn everything I can lay my hands on, whether it be 3D animation with Iclone/3DxChange, front-end web development with HTML/CSS, or marketing and project management. I look to perfect and master everything I do. <br>
+  </p>
 
- I was one of the organizers the first HackUCI; which drew over 300+ attendees. HackUCI was the first student-organized hackathon in Orange County, and lasted for 36 hours. Attendees worked on a variety of projects ranging from web applications to puzzle games. 
+  </div>
+
+<div class="col-lg-4">
+  <p> 
+  I'm currently employed as a Campus Ambassador for Readyforce for my school, and a research assistant at the California Plug Load Research Center.  <br>
+
+  I was one of the organizers the first HackUCI; which drew over 300+ attendees as the first student-organized hackathon in Orange County, and lasted for 36 hours.
+  
+   <br>
 
   </p>
 
@@ -67,26 +76,16 @@
 
 <div class="col-lg-4">
   <p> 
-  I'm currently employed as a Campus Ambassador for Readyforce for my school, and I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service! <br>
-
-  I'm also a research assistant at the California Plug Load Research center, where I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. 
-  </p>
-
-  </div>
-
-<div class="col-lg-4">
-  <p> 
-  I've also quite involved in campus activites; I'm the Vice President of the Video Game Design Club @ UCI, which is an organization that helps aspiring game developers network with potential employers and opportunities, and make games.  <br>
-
-  I'm also the Webmaster of the Taiwanese American Organization @ UCI, which is a club that promotes Taiwanese Culture and helps connect fellow Taiwanese Americans with each other. <br>
+At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of the Taiwanese American Organization @ UCI. <br>
+ <br>
 
   In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br>
 
   Find me on... <br>
 
-  <href ="www.readyforce.com/Jchiu5">Readyforce</href>
-  <href ="www.linkedin.com/in/foreza/">Linkedin</href>
-  <href ="www.github.com/foreza">Github</href>
+  <a href ="www.readyforce.com/Jchiu5">Readyforce</a> <br>
+  <a href ="www.linkedin.com/in/foreza/">Linkedin</a> <br>
+  <a href ="www.github.com/foreza">Github</a>
   
   </p>
 
@@ -104,13 +103,16 @@
 <div class="row constrain80">
 <div class="col-lg-6">
   <p>
-  <ul>
-    <li> Test
-    <li> Test
-    <li> Test
-    <li> Test
-    <li> Test
-  </ul>
+  
+
+
+I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service!
+
+I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. 
+
+
+which is an organization that helps aspiring game developers network with potential employers and opportunities, and make games.
+
    </p>
 
   </div>
