Added greyLay to avoid conflict with the margins

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h2>About Me</h2>
 
 <div class="row constrain80">
-<div class="col-lg-4">
+<div class="col-lg-4 greyLay">
   <p> Hi there! I'm Jason Chiu, and I'm a student at the <i>University of California, Irvine.</i></h2>
 
   I major in <b> Computer Game Science </b> and am looking to minor in Business Management.<br>
@@ -62,7 +62,7 @@
 
   </div>
 
-<div class="col-lg-4">
+<div class="col-lg-4 greyLay">
   <p> 
   I'm currently employed as a Campus Ambassador for Readyforce for my school, and a research assistant at the California Plug Load Research Center.  <br>
 
@@ -74,7 +74,7 @@
 
   </div>
 
-<div class="col-lg-4">
+<div class="col-lg-4 greyLay">
   <p> 
 At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of the Taiwanese American Organization @ UCI. <br>
  <br>
@@ -101,7 +101,7 @@ At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of t
 
 
 <div class="row constrain80">
-<div class="col-lg-6">
+<div class="col-lg-6 greyLay">
   <p>
   
 
@@ -117,7 +117,7 @@ which is an organization that helps aspiring game developers network with potent
 
   </div>
 
-<div class="col-lg-6">
+<div class="col-lg-6 greyLay">
   <p>
     <ul>
 
