More arrangement of divs

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       <h2>About Me</h2>
 
 <div class="row constrain80">
-<div class="col-lg-4 greyLay">
-  <p> Hi there! I'm Jason Chiu, and I'm a student at the <i>University of California, Irvine.</i></h2>
+<div class="col-lg-4">
+<div class="greyLay">
+  <p> Hi there! I'm Jason Chiu, and I'm a student at the <i>University of California, Irvine.</i>
 
   I major in <b> Computer Game Science </b> and am looking to minor in Business Management.<br>
 
@@ -61,8 +62,10 @@
   </p>
 
   </div>
+  </div>
 
-<div class="col-lg-4 greyLay">
+<div class="col-lg-4">
+<div class="greyLay">
   <p> 
   I'm currently employed as a Campus Ambassador for Readyforce for my school, and a research assistant at the California Plug Load Research Center.  <br>
 
@@ -73,8 +76,9 @@
   </p>
 
   </div>
-
-<div class="col-lg-4 greyLay">
+  </div>
+<div class="col-lg-4">
+<div class="greyLay">
   <p> 
 At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of the Taiwanese American Organization @ UCI. <br>
  <br>
@@ -90,7 +94,6 @@ At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of t
   </p>
 
   </div>
-
 </div>
 </div>
 
@@ -101,7 +104,8 @@ At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of t
 
 
 <div class="row constrain80">
-<div class="col-lg-6 greyLay">
+<div class="col-lg-6">
+<div class="greyLay">
   <p>
   
 
@@ -116,13 +120,13 @@ which is an organization that helps aspiring game developers network with potent
    </p>
 
   </div>
+  </div>
 
-<div class="col-lg-6 greyLay">
+<div class="col-lg-6">
+<div class="greyLay">
   <p>
     <ul>
 
-    <li> I've done this and that.. [WIP] 
-    <li> I've done this and that.. [WIP] 
     
   </ul>
 
@@ -131,6 +135,8 @@ which is an organization that helps aspiring game developers network with potent
 
   </div>
 </div>
+</div>
+
 
 
 
