--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
 <div class="row constrain80">
 <div class="col-lg-4">
 <div class="greyLay">
-  <p> Hi there! I'm Jason Chiu, and I'm a student at the <i>University of California, Irvine.</i>
+  <p> <div class="pold">Hi there! I'm Jason Chiu.</div> <br>
 
-  I major in <b> Computer Game Science </b> and am looking to minor in Business Management.<br>
+
+   I'm a student at the <i>University of California, Irvine.</i> <br>
+
+  I major in Computer Game Science and am looking to minor in Business Management.<br>
 
   I manage and mentor individuals who wish to enter the world of game development, and learn everything I can lay my hands on, whether it be 3D animation with Iclone/3DxChange, front-end web development with HTML/CSS, or marketing and project management. I look to perfect and master everything I do. <br>
   </p>
