Fixed up breaks and added h4.

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 <div class="row constrain80">
 <div class="col-lg-4">
 <div class="greyLay">
-  <p> <div class="pold">Hi there! I'm Jason Chiu.</div> <br>
+  <p> <h4>Hi there! I'm Jason Chiu. </h4>
 
 
-   I'm a student at the <i>University of California, Irvine.</i> <br>
+   I'm a student at the <i>University of California, Irvine.</i> <br><br>
 
-  I major in Computer Game Science and am looking to minor in Business Management.<br>
+  I major in Computer Game Science and am looking to minor in Business Management.<br><br>
 
   I manage and mentor individuals who wish to enter the world of game development, and learn everything I can lay my hands on, whether it be 3D animation with Iclone/3DxChange, front-end web development with HTML/CSS, or marketing and project management. I look to perfect and master everything I do. <br>
   </p>
@@ -70,7 +70,7 @@
 <div class="col-lg-4">
 <div class="greyLay">
   <p> 
-  I'm currently employed as a Campus Ambassador for Readyforce for my school, and a research assistant at the California Plug Load Research Center.  <br>
+  I'm currently employed as a Campus Ambassador for Readyforce for my school, and a research assistant at the California Plug Load Research Center.  <br><br>
 
   I was one of the organizers the first HackUCI; which drew over 300+ attendees as the first student-organized hackathon in Orange County, and lasted for 36 hours.
   
@@ -83,12 +83,12 @@
 <div class="col-lg-4">
 <div class="greyLay">
   <p> 
-At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of the Taiwanese American Organization @ UCI. <br>
- <br>
+At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of the Taiwanese American Organization @ UCI.
+ <br> <br>
 
-  In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br>
+  In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br><br>
 
-  Find me on... <br>
+  Find me on... <br><br>
 
   <a href ="www.readyforce.com/Jchiu5">Readyforce</a> <br>
   <a href ="www.linkedin.com/in/foreza/">Linkedin</a> <br>
