--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
       <h2>About Me</h2>
 
 <div class="row constrain80">
+
 <div class="col-lg-4">
 <div class="greyLay">
-  <p> <h4>Hi there! I'm Jason Chiu. </h4>
+  <p> Hi there! I'm Jason Chiu. <br><br>
 
 
    I'm a student at the <i>University of California, Irvine.</i> <br><br>
