Changed p to open sans, soothing for the eyes.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="shortcut icon" href="images/tao_logo-favicon.ico"> <!-- used http://www.favicongenerator.com/ --> 
       <!-- Stylesheet for website -->
@@ -58,11 +59,13 @@
   <p> Hi there! I'm Jason Chiu. <br><br>
 
 
-   I'm a student at the <i>University of California, Irvine.</i> <br><br>
+  I attend the <i>University of California, Irvine.</i> <br><br>
 
-  I major in Computer Game Science and am looking to minor in Business Management.<br><br>
+  Majoring in Computer Game Science, looking to minor in Business Management.<br><br>
 
-  I manage and mentor individuals who wish to enter the world of game development, and learn everything I can lay my hands on, whether it be 3D animation with Iclone/3DxChange, front-end web development with HTML/CSS, or marketing and project management. I look to perfect and master everything I do. <br>
+  
+
+  <br>
   </p>
 
   </div>
